# sol-batch-token-transfer

./: .env.example  .gitignore  Cargo.toml  README.md  data.csv.example  done.csv  done2.csv
src/: main.rs  util.rs
